<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- Event Name -->
        <!-- android:layout_height="?android:attr/listPreferredItemHeight" -->
        <!-- android:textAppearance="?android:attr/textAppearanceLarge" -->


        <!--
             android:textColor android:textSize android:textStyle (bold, italic, 
			bolditalic) android:typeface (normal, sans, serif, monospace)
        -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="5dip"
            android:singleLine="true"
            android:text="@string/creating_new_event"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="5dip"
            android:singleLine="true"
            android:text="@string/event_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eTxtEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_eventname" />

        <!-- Places -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eTxtPlace1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eTxtPlace2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Date and Times -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0px" >

            <EditText
                android:id="@+id/eTxtDate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false" />

            <EditText
                android:id="@+id/eTxtTime1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0px" >

            <EditText
                android:id="@+id/eTxtDate2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false" />

            <EditText
                android:id="@+id/eTxtTime2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false" />
        </LinearLayout>

        <!-- Button "Select Participants" -->

        <Button
            android:id="@+id/btnSelectParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_participants"
            android:textColor="#833"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>